# Chess-solver

./: .gitignore  BuildOptions.cmake  CMakeLists.txt  README.md  test.txt
deliverables/: 20230304-2243-Report.txt
deliverables/code_coverage_report/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
deliverables/code_coverage_report/src/: board-utils.cpp.func-sort-c.html  board-utils.cpp.func.html  board-utils.cpp.gcov.html  index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  move-generator.cpp.func-sort-c.html  move-generator.cpp.func.html  move-generator.cpp.gcov.html  position.cpp.func-sort-c.html  position.cpp.func.html  position.cpp.gcov.html  position.h.func-sort-c.html  position.h.func.html  position.h.gcov.html
src/: CMakeLists.txt  board-utils.cpp  board-utils.h  chess-lib-tests.cpp  main.cpp  move-generator.cpp  move-generator.h  position.cpp  position.h
src/board-utils/: CMakeLists.txt  board-utils.cpp  position.cpp
src/board-utils/include/board-utils/: position.h
src/board-utils/tests/: board-utils-tests.cpp
src/move-generator/: CMakeLists.txt  move-generator.cpp
src/move-generator/include/move-generator/: move-generator.h
src/move-generator/tests/: move-generator-tests.cpp
src/sample-lib/: CMakeLists.txt  sample.cpp  sample.h
src/sample-lib/tests/: sample-tests.cpp
